--- a/frontend/index.html
+++ b/frontend/index.html
@@ -66,18 +66,20 @@
     .menu-button {
       background: #28a745;
       margin-bottom: 0.75rem;
-      color: white;
-      font-size: 1rem;
     }
     .menu-button:nth-child(2) { background: #ffc107; }
     .menu-button:nth-child(3) { background: #dc3545; }
+    .menu-button {
+      color: white;
+      font-size: 1rem;
+    }
     /* 리포트 카드 이미지 */
     .report-img {
       display: block;
       max-width: 100%;
       margin: 0 auto;
     }
-    /* GIF (로그인/메인 페이지 상단 로고) */
+    /* GIF (로그인 페이지 상단 로고) */
     .top-gif {
       display: block;
       width: 60%;
@@ -90,10 +92,10 @@
 </head>
 <body>
   <div class="container">
-    <!-- “처음으로” 버튼 (로그인/메인 제외 나머지 페이지에서만 보이도록 JS가 제어) -->
+    <!-- “처음으로” 버튼: 로그인/메인 제외 모든 페이지에서만 보이도록 JS 제어 -->
     <div id="homeButton" class="home-button hidden">
-      <!-- 아이콘 경로를 /icons/home.svg 로 지정해야 frontend/icons/home.svg 파일을 불러옵니다 -->
-      <img src="/icons/home.svg" alt="Home 아이콘"> 
+      <!-- PNG 아이콘으로 교체 -->
+      <img src="/icons/home.png" alt="Home 아이콘">
       <span>처음으로</span>
     </div>
 
@@ -134,6 +136,7 @@
     <div id="reviewSection" class="hidden">
       <h1>틀린 문제 다시 풀기 (준비 중)</h1>
     </div>
+
     <!-- ⑥ 틀린 문제 OX 퀴즈 (준비 중) -->
     <div id="quizSection" class="hidden">
       <h1>틀린 문제 O/X 퀴즈 (준비 중)</h1>
@@ -144,13 +147,14 @@
     let currentId = '';
     let currentExam = '';
 
-    // “처음으로” 버튼 클릭 → 메뉴 페이지로 돌아가기
+    // “처음으로” 버튼 클릭 → 메뉴 페이지(메뉴 버튼 1,2,3 선택 페이지)로 돌아가기
     document.getElementById('homeButton').onclick = () => {
       hideAllSections();
       document.getElementById('menuSection').classList.remove('hidden');
-      // 홈 버튼은 메뉴 페이지를 제외한 다른 모든 페이지에서만 보이게
-      document.getElementById('homeButton').classList.remove('hidden');
       clearMessages();
+      // “처음으로” 버튼은 메뉴 페이지에서는 숨기지 않는다(메뉴 페이지에는 그대로 노출).
+      // 만약 메뉴 페이지에서도 숨기고 싶다면 다음 줄을 활성화:
+      // document.getElementById('homeButton').classList.add('hidden');
     };
 
     // 1) 로그인 단계
@@ -220,6 +224,7 @@
 
     // 3) 메뉴 버튼 클릭
     document.getElementById('menuReport').onclick = () => {
+      // “내 성적표 확인” → /api/reportcard?exam=&id= 호출
       fetch(`/api/reportcard?exam=${encodeURIComponent(currentExam)}&id=${encodeURIComponent(currentId)}`)
         .then(res => res.json().then(j => ({ ok: res.ok, ...j })))
         .then(data => {
@@ -246,6 +251,7 @@
       document.getElementById('reviewSection').classList.remove('hidden');
       document.getElementById('homeButton').classList.remove('hidden');
     };
+
     document.getElementById('menuQuiz').onclick = () => {
       hideAllSections();
       document.getElementById('quizSection').classList.remove('hidden');
@@ -265,3 +271,4 @@
   </script>
 </body>
 </html>
+
